--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     },
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "vlucas/phpdotenv": "^5.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.2"
